--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="headerContainor">
-            <a href="/"><img src="/static/img/logo.svg"></a>
+            <a href="/"><img src="/static/img/logo.svg" alt="로고"></a>
             <a href="signin.html" class="loginBtn">로그인</a>
         </div>
     </header>
@@ -21,7 +21,7 @@
             </p>
             <a href="signup.html" class="addLink">링크 추가하기</a>
             <div class="img1">
-                <img src="/static/img/dim.png">
+                <img src="/static/img/dim.png" alt="홈페이지 이미지">
             </div>
         </div>
         <div class="content2">
@@ -37,12 +37,12 @@
                         한 공간에 저장하세요.
                     </p>
                 </div>
-                <img src="/static/img/content2.png" alt="content2">
+                <img src="/static/img/content2.png" alt="링크 저장" class="img2">
             </div>
         </div>
         <div class="content3">
             <div class="containor3">
-                <div class="img3"><img src="/static/img/content3.png"></div>
+                <img src="/static/img/content3.png" alt="폴더 관리" class="img3">
                 <div class="textbox">
                     <h1 class="content3Title">
                         링크를 폴더로 <br>
@@ -68,16 +68,12 @@
                         공유해 보세요.
                     </p>
                 </div>
-                <div class="img4">
-                    <img src="static/img/content4.png" alt="content4">
-                </div>
+                <img src="static/img/content4.png" alt="링크 공유" class="img4">
             </div>
         </div>
         <div class="content5">
             <div class="containor5">
-                <div class="img5">
-                    <img src="/static/img/content5.png" alt="content5">
-                </div>
+                <img src="/static/img/content5.png" alt="링크 검색" class="img5">
                 <div class="textbox">
                     <h1 class="content5Title">
                         저장한 링크를 <br>
@@ -99,10 +95,10 @@
                     <a href="/faq.html">FAQ</a>
                 </div>
                 <div class="footerIcon">
-                    <a href="https://www.facebook.com/" target="_blank"><img src="/static/img/facebook.svg"></a>
-                    <a href="https://twitter.com/" target="_blank"><img src="/static/img/twiter.svg"></a>
-                    <a href="https://youtube.com" target="_blank"><img src="/static/img/youtube.svg"></a>
-                    <a href="https://instagram.com" target="_blank"><img src="/static/img/instagram.svg"></a>
+                    <a href="https://www.facebook.com/" target="_blank"><img src="/static/img/facebook.svg" alt="facebook"></a>
+                    <a href="https://twitter.com/" target="_blank"><img src="/static/img/twiter.svg" alt="twitter"></a>
+                    <a href="https://youtube.com" target="_blank"><img src="/static/img/youtube.svg" alt="youtube"></a>
+                    <a href="https://instagram.com" target="_blank"><img src="/static/img/instagram.svg" alt="instagram"></a>
                 </div>
             </div>
         </div>
