--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         쉽게 저장하고 관리해 보세요
       </h1>
       <a class="btn main__link" href="./signup.html">링크 추가하기</a>
+      <img class="main__bg-img" src="./img/main_bg.png" alt="메인 홈페이지 사진">
     </div>
   </main>
   <section class="main-section">
