--- a/signup.html
+++ b/signup.html
@@ -5,29 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Linkbrary</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Abel&family=Acme&display=swap" rel="stylesheet">
-  <link rel="stylesheet" as="style" crossorigin
-    href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
-  <link rel="stylesheet" href="./css/default.css">
-  <link rel="stylesheet" href="./css/auth.css">
-  <meta property="og:title" content="Linkbrary" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://linkbrary-oh.netlify.app/" />
-  <meta property="og:image" content="./img/main_bg.png" />
-  <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
+  <link rel="stylesheet" href="/assets/css/pages/auth.css" />
 </head>
 
 <body>
   <div class="auth">
     <div class="auth__inner">
       <a href="/">
-        <img class="auth__logo" src="./img/logo.svg" alt="Linkbrary logo">
+        <img class="auth__logo" src="/assets/img/logo.svg" alt="Linkbrary logo">
       </a>
       <div class="auth__text-wp">
         <p class="auth__text">이미 회원이신가요?</p>
-        <a class="auth__link" href="./signin.html">로그인 하기</a>
+        <a class="auth__link" href="/signin.html">로그인 하기</a>
       </div>
       <form class="auth-form">
         <div class="auth-form__input-wp">
@@ -38,14 +27,14 @@
           <label class="auth-form__label">비밀번호</label>
           <div class="auth-form__pw-wp">
             <input class="auth-form__input" type="password">
-            <img class="auth-form__eye" src="./img/eye_off.png" alt="eye off">
+            <img class="auth-form__eye" src="/assets/img/eye_off.png" alt="eye off">
           </div>
         </div>
         <div class="auth-form__input-wp">
           <label class="auth-form__label">비밀번호 확인</label>
           <div class="auth-form__pw-wp">
             <input class="auth-form__input">
-            <img class="auth-form__eye" src="./img/eye_on.png" alt="eye on">
+            <img class="auth-form__eye" src="/assets/img/eye_on.png" alt="eye on">
           </div>
         </div>
         <button class="btn auth-form__btn">회원가입</button>
@@ -55,12 +44,12 @@
         <ul class="auth-sns__ul">
           <li class="auth-sns__li">
             <a href="https://www.google.com/">
-              <img class="auth-form__img" src="./img/login_google.png" alt="구글 로그인">
+              <img class="auth-form__img" src="/assets/img/login_google.png" alt="구글 로그인">
             </a>
           </li>
           <li class="auth-sns__li">
             <a href="https://www.kakaocorp.com/page/">
-              <img class="auth-form__img" src="./img/login_kakaotalk.png" alt="카카오톡 로그인">
+              <img class="auth-form__img" src="/assets/img/login_kakaotalk.png" alt="카카오톡 로그인">
             </a>
           </li>
         </ul>
