--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ko">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Linkbrary</title>
   <link rel="stylesheet" href="/assets/css/pages/main.css" />
   <meta property="og:title" content="Linkbrary" />
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="header__inner">
       <a class="header__link-home" href="/">
-        <img class="header__logo" src="/assets/img/logo.svg" alt="linkbrary logo">
+        <img class="header__logo" src="/assets/img/logo.svg" alt="linkbrary logo" />
       </a>
       <a class="btn header__link-login" href="/signin.html">로그인</a>
     </div>
@@ -25,11 +25,11 @@
   <main class="main">
     <div class="main__content">
       <h1 class="main__text">
-        <span class="main__text--gradient">세상의 모든 정보</span>를 <br>
+        <span class="main__text--gradient">세상의 모든 정보</span>를 <br />
         쉽게 저장하고 <span class="main__text--mobile-br">관리해 보세요</span>
       </h1>
       <a class="btn main__link" href="/signup.html">링크 추가하기</a>
-      <img class="main__bg-img" src="/assets/img/main_bg.png" alt="메인 홈페이지 사진">
+      <img class="main__bg-img" src="/assets/img/main_bg.png" alt="메인 홈페이지 사진" />
     </div>
   </main>
   <section class="main-section">
@@ -41,51 +41,51 @@
             저장하세요
           </h2>
           <p class="main-article__p">
-            나중에 읽고 싶은 글, 다시 보고 싶은 영상, <br class="pc-br">
-            사고 싶은 옷, 기억하고 싶은 모든 것을 <br class="pc-br">
+            나중에 읽고 싶은 글, 다시 보고 싶은 영상, <br class="pc-br" />
+            사고 싶은 옷, 기억하고 싶은 모든 것을 <br class="pc-br" />
             한 공간에 저장하세요.
           </p>
         </div>
-        <img class="main-article__img" src="/assets/img/section1.png" alt="원하는 링크를 저장하세요">
+        <img class="main-article__img" src="/assets/img/section1.png" alt="원하는 링크를 저장하세요" />
       </article>
       <article class="main-article">
         <div class="main-article__content">
           <h2 class="main-article__title">
-            링크를 폴더로 <br class="pc-br">
+            링크를 폴더로 <br class="pc-br" />
             <span class="main-article__title--gradient">관리</span>하세요
           </h2>
           <p class="main-article__p">
-            나만의 폴더를 무제한으로 만들고 <br class="pc-br">
+            나만의 폴더를 무제한으로 만들고 <br class="pc-br" />
             다양하게 활용할 수 있습니다.
           </p>
         </div>
-        <img class="main-article__img" src="/assets/img/section2.png" alt="링크를 폴더로 관리하세요">
+        <img class="main-article__img" src="/assets/img/section2.png" alt="링크를 폴더로 관리하세요" />
       </article>
       <article class="main-article">
         <div class="main-article__content">
           <h2 class="main-article__title">
-            저장한 링크를 <br class="pc-br">
+            저장한 링크를 <br class="pc-br" />
             <span class="main-article__title--gradient">공유</span>해 보세요.
           </h2>
           <p class="main-article__p">
-            여러 링크를 폴더에 담고 공유할 수 있습니다. <br class="pc-br">
-            가족, 친구, 동료들에게 쉽고 빠르게 링크를 <br class="pc-br">
+            여러 링크를 폴더에 담고 공유할 수 있습니다. <br class="pc-br" />
+            가족, 친구, 동료들에게 쉽고 빠르게 링크를 <br class="pc-br" />
             공유해 보세요.
           </p>
         </div>
-        <img class="main-article__img" src="/assets/img/section3.png" alt="저장한 링크를 공유해 보세요.">
+        <img class="main-article__img" src="/assets/img/section3.png" alt="저장한 링크를 공유해 보세요." />
       </article>
       <article class="main-article">
         <div class="main-article__content">
           <h2 class="main-article__title">
-            저장한 링크를 <br class="pc-br">
+            저장한 링크를 <br class="pc-br" />
             <span class="main-article__title--gradient">검색</span>해 보세요
           </h2>
           <p class="main-article__p">
-            중요한 정보들을 검색으로 쉽게 <br class="pc-br">찾아보세요.
+            중요한 정보들을 검색으로 쉽게 <br class="pc-br" />찾아보세요.
           </p>
         </div>
-        <img class="main-article__img" src="/assets/img/section4.png" alt="저장한 링크를 검색해 보세요">
+        <img class="main-article__img" src="/assets/img/section4.png" alt="저장한 링크를 검색해 보세요" />
       </article>
     </div>
   </section>
@@ -103,22 +103,22 @@
       <ul class="footer__sns">
         <li class="footer__sns-li">
           <a class="footer__sns-link" href="https://www.facebook.com/" target="_blank">
-            <img src="/assets/img/sns_facebook.png" alt="facebook icon">
+            <img src="/assets/img/sns_facebook.png" alt="facebook icon" />
           </a>
         </li>
         <li class="footer__sns-li">
           <a class="footer__sns-link" href="https://twitter.com/" target="_blank">
-            <img src="/assets/img/sns_twitter.png" alt="twitter icon">
+            <img src="/assets/img/sns_twitter.png" alt="twitter icon" />
           </a>
         </li>
         <li class="footer__sns-li">
           <a class="footer__sns-link" href="https://www.youtube.com/" target="_blank">
-            <img src="/assets/img/sns_youtube.png" alt="youtube icon">
+            <img src="/assets/img/sns_youtube.png" alt="youtube icon" />
           </a>
         </li>
         <li class="footer__sns-li">
           <a class="footer__sns-link" href="https://www.instagram.com/" target="_blank">
-            <img src="/assets/img/sns_instagram.png" alt="instagram icon">
+            <img src="/assets/img/sns_instagram.png" alt="instagram icon" />
           </a>
         </li>
       </ul>
