--- a/signin.html
+++ b/signin.html
@@ -2,8 +2,8 @@
 <html lang="ko">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Linkbrary</title>
   <link rel="stylesheet" href="/assets/css/pages/auth.css" />
 </head>
@@ -12,7 +12,7 @@
   <div class="auth">
     <div class="auth__inner">
       <a href="/">
-        <img class="auth__logo" src="/assets/img/logo.svg" alt="Linkbrary logo">
+        <img class="auth__logo" src="/assets/img/logo.svg" alt="Linkbrary logo" />
       </a>
       <div class="auth__text-wp">
         <p class="auth__text">회원이 아니신가요?</p>
@@ -21,13 +21,13 @@
       <form class="auth-form">
         <div class="auth-form__input-wp">
           <label class="auth-form__label">이메일</label>
-          <input class="auth-form__input" type="email">
+          <input class="auth-form__input" type="email" />
         </div>
         <div class="auth-form__input-wp">
           <label class="auth-form__label">비밀번호</label>
           <div class="auth-form__pw-wp">
-            <input class="auth-form__input" type="password">
-            <img class="auth-form__eye" src="/assets/img/eye_off.png" alt="eye off">
+            <input class="auth-form__input" type="password" />
+            <img class="auth-form__eye" src="/assets/img/eye_off.png" alt="eye off" />
           </div>
           </div>
         <button class="btn auth-form__btn">로그인</button>
@@ -37,12 +37,12 @@
         <ul class="auth-sns__ul">
           <li class="auth-sns__li">
             <a href="https://www.google.com/">
-              <img class="auth-form__img" src="/assets/img/login_google.png" alt="구글 로그인">
+              <img class="auth-form__img" src="/assets/img/login_google.png" alt="구글 로그인" />
             </a>
           </li>
           <li class="auth-sns__li">
             <a href="https://www.kakaocorp.com/page/">
-              <img class="auth-form__img" src="/assets/img/login_kakaotalk.png" alt="카카오톡 로그인">
+              <img class="auth-form__img" src="/assets/img/login_kakaotalk.png" alt="카카오톡 로그인" />
             </a>
           </li>
         </ul>
