--- a/signin.html
+++ b/signin.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="global.css" />
   </head>
   <body>
-    <div class="section">
+    <main class="section">
       <form class="content">
-        <div class="title">
+        <section class="title">
           <a href="index.html">
             <img class="logo-img" src="img/logo.svg" alt="" />
           </a>
@@ -18,19 +18,28 @@
             <div class="question-text">회원이 아니신가요?</div>
             <a class="signupLink" href="signup.html">회원 가입하기</a>
           </div>
-        </div>
-        <div class="input">
+        </section>
+        <section class="input">
           <div class="input-section">
             <div class="text">이메일<br /></div>
             <input id="email" class="user-input" type="email" name="email" />
-            <div id="errorText" class="text error">이메일을 입력해주세요.</div>
+            <div id="email-errorText" class="text error">
+              이메일을 입력해주세요.
+            </div>
           </div>
           <div class="input-section">
             <div class="text">비밀번호<br /></div>
-            <input class="user-input" type="password" name="password" />
-            <div class="text">비밀번호를 확인해 주세요.</div>
+            <input
+              id="password"
+              class="user-input"
+              type="password"
+              name="password"
+            />
+            <div id="password-errorText" class="text error">
+              비밀번호를 확인해 주세요.
+            </div>
           </div>
-        </div>
+        </section>
         <button class="signin">로그인</button>
         <div class="social">
           <div class="social-text">소셜 로그인</div>
@@ -44,7 +53,7 @@
           </div>
         </div>
       </form>
-    </div>
+    </main>
     <script src="input.js"></script>
   </body>
 </html>
