--- a/index.html
+++ b/index.html
@@ -1,125 +1,191 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <title>Linkbrary</title>
+    <meta property="og:title" content="Linkbrary" key="title" />
+    <meta
+      name="description"
+      property="og:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
+      key="description"
+    />
+    <meta
+      property="og:image"
+      content="https://visitbusan.net/uploadImgs/files/cntnts/20211130150754165_wufrotr"
+      key="image"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@linkbrary" />
+    <meta name="twitter:title" content="Linkbrary" />
+    <meta
+      name="twitter:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
+    />
+    <meta
+      name="twitter:image"
+      content="https://visitbusan.net/uploadImgs/files/cntnts/20211130150754165_wufrotr"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width,minimum-scale=1,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
     <link
       rel="stylesheet"
-      as="style"
-      crossorigin
-      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="./style.css" />
-    <title>linkbrary</title>
+    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
   </head>
   <body>
-    <header class="header">
-      <a href="index.html" class="header--title"
-        ><h1 class="header--h1">
-          <img src="./img/Linkbrary.png" alt="logo" /></h1
-      ></a>
-      <a class="button login" href="./signin.html">로그인</a>
+    <nav class="gnb">
+      <a href="./index.html">
+        <img
+          class="logo"
+          src="./assets/images/logo.svg"
+          alt="홈으로 연결된 Linkbrary 로고"
+        />
+      </a>
+      <a class="cta cta-short" href="./login/signin.html">
+        <span>로그인</span>
+      </a>
+    </nav>
+
+    <header>
+      <div class="hero-container">
+        <h1 class="hero-container__title">
+          <span class="title-gradient background-clip-text">
+            세상의 모든 정보</span
+          >를
+          <br />
+          쉽게 저장하고 관리해 보세요
+        </h1>
+        <a class="cta cta--long" href="./signup/signup.html">
+          <span>링크 추가하기</span>
+        </a>
+        <img
+          src="./assets/images/hero.png"
+          class="hero-container__image"
+          alt="Linkbrary 서비스 소개"
+        />
+      </div>
     </header>
     <main>
-      <section class="contents-01">
-        <h2 class="content--title">
-          <strong class="highlight puplePink">세상의 모든 정보</strong>를<br />
-          쉽게 저장하고 관리해보세요
+      <section class="section-container">
+        <h2 class="section-container__title">
+          <span class="title-1-gradient background-clip-text"> 원하는 링크</span
+          >를 저장하세요
         </h2>
-        <a class="button addLink" href="./signup.html">링크 추가하기</a>
+        <p class="section-container__description">
+          나중에 읽고 싶은 글, 다시 보고 싶은 영상,
+          <br class="line-break-tablet-desktop" />
+          사고 싶은 옷, 기억하고 싶은 모든 것을
+          <br class="line-break-tablet-desktop" />
+          한 공간에 저장하세요.
+        </p>
         <img
-          class="img--main"
-          src="./img/landing/img_1.png"
-          alt="랜딩페이지 첫 이미지"
+          src="./assets/images/image1.png"
+          class="section-container__image"
+          alt="링크의 내용이 담긴 카드들"
         />
       </section>
-      <section class="contents left">
-        <div class="content">
-          <h2 class="content--title">
-            <strong class="highlight redSkyblue">원하는 링크</strong>를<br />
-            저장하세요
-          </h2>
-          <p class="content--desc">
-            나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br />
-            사고 싶은 옷, 기억하고 싶은 모든 것을<br />
-            한 공간에 저장하세요.
-          </p>
-        </div>
+      <section class="section-container">
+        <h2 class="section-container__title">
+          링크를 폴더로
+          <span class="title-2-gradient background-clip-text">관리</span>하세요
+        </h2>
+        <p class="section-container__description">
+          나만의 폴더를 무제한으로 만들고
+          <br class="line-break-tablet-desktop" />
+          다양하게 활용할 수 있습니다.
+        </p>
         <img
-          class="content--img"
-          src="./img/landing/img_2.png"
-          alt="랜딩페이지 두번째 이미지"
+          src="./assets/images/image2.png"
+          class="section-container__image"
+          alt="폴더 이름 변경 기능"
         />
       </section>
-      <section class="contents right">
-        <div>
-          <h2 class="content--title">
-            링크를 폴더로<br />
-            <strong class="highlight skyblueYellow">관리</strong>하세요
-          </h2>
-          <p class="content--desc">
-            나만의 폴더를 무제한으로 만들고<br />
-            다양하게 활용할 수 있습니다.
-          </p>
-        </div>
+      <section class="section-container">
+        <h2 class="section-container__title">
+          저장한 링크를
+          <span class="title-3-gradient background-clip-text">공유</span>해
+          보세요
+        </h2>
+        <p class="section-container__description">
+          여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게
+          쉽고 빠르게 링크를 공유해 보세요.
+        </p>
         <img
-          class="content--img"
-          src="./img/landing/img_3.png"
-          alt="랜딩페이지 세번째 이미지"
+          src="./assets/images/image3.png"
+          class="section-container__image"
+          alt="폴더 공유 기능"
         />
       </section>
-      <section class="contents left">
-        <div>
-          <h2 class="content--title">
-            저장한 링크를<br />
-            <strong class="highlight pupleBlack">공유</strong>해보세요
-          </h2>
-          <p class="content--desc">
-            여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
-            가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
-            공유해 보세요.
-          </p>
-        </div>
+      <section class="section-container">
+        <h2 class="section-container__title">
+          저장한 링크를
+          <span class="title-4-gradient background-clip-text">검색</span>해
+          보세요
+        </h2>
+        <p class="section-container__description">
+          중요한 정보들을 검색으로 쉽게 찾아보세요.
+        </p>
         <img
-          class="content--img"
-          src="./img/landing/img_4.png"
-          alt="랜딩페이지 네번째 이미지"
-        />
-      </section>
-      <section class="contents right">
-        <div>
-          <h2 class="content--title">
-            저장한 링크를<br />
-            <strong class="highlight pinkSkyblue">검색</strong>해보세요
-          </h2>
-          <p class="content--desc">중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
-        </div>
-        <img
-          class="content--img"
-          src="./img/landing/img_5.png"
-          alt="랜딩페이지 다섯번째 이미지"
+          src="./assets/images/image4.png"
+          class="section-container__image"
+          alt="링크 검색 기능"
         />
       </section>
     </main>
     <footer>
-      <div class="footer--container">
-        <p class="codeit">codeit-2023</p>
-        <div class="footer--privacy">
-          <a class="privacy" href="privacy">Privacy Policy</a>
-          <a class="faq" href="./faq">FAQ</a>
+      <div class="footer-box">
+        <span class="copyright">©codeit - 2023</span>
+        <div class="footer-links">
+          <a class="footer-link" href="privacy.html">Privacy Policy</a>
+          <a class="footer-link" href="faq.html">FAQ</a>
         </div>
-        <div class="sites">
-          <a href="https://www.facebook.com/" target="_blank">
-            <img src="./img/footer/Vector-1.png" />
+        <div class="sns">
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              src="./assets/images/facebook.svg"
+              alt="facebook 홈페이지로 연결된 facebook 로고"
+            />
           </a>
-          <a href="https://twitter.com/?lang=en" target="_blank">
-            <img src="./img/footer/Vector-2.png" />
+          <a
+            href="https://twitter.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              src="./assets/images/twitter.svg"
+              alt="twitter 홈페이지로 연결된 twitter 로고"
+            />
           </a>
-          <a href="https://www.youtube.com/" target="_blank">
-            <img src="./img/footer/Vector-3.png" />
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              src="./assets/images/youtube.svg"
+              alt="youtube 홈페이지로 연결된 youtube 로고"
+            />
           </a>
-          <a href="https://www.instagram.com/" target="_blank">
-            <img src="./img/footer/Vector-4.png" />
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              src="./assets/images/instagram.svg"
+              alt="instagram 홈페이지로 연결된 instagram 로고"
+            />
           </a>
         </div>
       </div>
