--- a/signin.html
+++ b/signin.html
@@ -31,9 +31,9 @@
               이메일<br>
               <input class="email-input" type="email">
             </label>
-            <p class="error-msg email-blank-error hide">이메일을 입력해주세요</p>
-            <p class="error-msg email-type-error hide">올바른 이메일 주소가 아닙니다.</p>
-            <p class="error-msg check-email hide">이메일을 확인해주세요</p>
+            <p class="error-msg email-error hide"></p>
+            <!-- <p class="error-msg email-type-error hide">올바른 이메일 주소가 아닙니다.</p>
+            <p class="error-msg check-email hide">이메일을 확인해주세요</p> -->
           </li>
           <li class="pwd-input-wrapper">
             <label>
@@ -43,8 +43,7 @@
             <button class="pwd-eye-off">
               <img id="eyeOnOff" src="images/eye-off.svg" alt="eye-off">
             </button>
-            <p class="error-msg pwd-blank-error hide">비밀번호를 입력해주세요</p>
-            <p class="error-msg check-pwd hide">비밀번호를 확인해주세요</p>
+            <p class="error-msg pwd-error hide"></p>
           </li>
         </ol>
       </form>
