--- a/signin/index.html
+++ b/signin/index.html
@@ -8,7 +8,7 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="../signin/sign.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="sign-container">
@@ -17,7 +17,7 @@
           <img class="header-logo" src="../image/Linkbrary.svg"/>
         </a>
         <p class="header-message">
-          이미 회원이신가요?<a class="header-link" href="../signin/signin.html">로그인 하기</a>
+          회원이 아니신가요?<a class="header-link" href="../signup/index.html">회원 가입하기</a>
         </p>
       </header>
       <div class="sign-box">
@@ -26,26 +26,22 @@
             <div class="sign-form-inputs-box">
               <label class="sign-input-label">이메일</label>
               <input class="email-input" type="email" />
+              <div class="error-message-email"></div>
             </div>
+
             <div class="sign-form-inputs-box sign-password">
               <label class="sign-input-label">비밀번호</label>
               <input class="password-input" type="password" />
-              <button class="eye-button" type="button">
-                <img src="../image/eye-off.jpg" />
-              </button>
-            </div>
-            <div class="sign-form-inputs-box sign-password">
-              <label class="sign-input-label">비밀번호 확인</label>
-              <input class="password-input" type="password" />
+              <div class="error-message-password"></div>
               <button class="eye-button" type="button">
                 <img src="../image/eye-off.jpg" />
               </button>
             </div>
           </div>
-          <button class="login-button" type="submit">회원가입</button>
+          <button class="login-button" type="submit">로그인</button>
         </form>
         <div class="social-login_group">
-          <span class="social-login-text">다른 방식으로 가입하기</span>
+          <span class="social-login-text">소셜 로그인</span>
           <div class="social-login-buttons">
             <a class="social-login-button google-link" href="https://www.google.com/">
               <img src="../image/google icon.png" />
@@ -56,6 +52,9 @@
           </div>
         </div>
       </div>
-    </div>
+
+      <script type="module" src="../common.js"></script>
+      <script type="module" src="./app.js"></script>
+  </div>
   </body>
 </html>
