--- a/signup/index.html
+++ b/signup/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>signin</title>
+    <title>signup</title>
     <link
       rel="stylesheet"
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="./sign.css" />
+    <link rel="stylesheet" href="../signin/style.css" />
   </head>
   <body>
     <div class="sign-container">
@@ -17,7 +17,7 @@
           <img class="header-logo" src="../image/Linkbrary.svg"/>
         </a>
         <p class="header-message">
-          회원이 아니신가요?<a class="header-link" href="../signup/signup.html">회원 가입하기</a>
+          이미 회원이신가요?<a class="header-link" href="../signin/index.html">로그인 하기</a>
         </p>
       </header>
       <div class="sign-box">
@@ -28,7 +28,6 @@
               <input class="email-input" type="email" />
               <div class="error-message-email"></div>
             </div>
-
             <div class="sign-form-inputs-box sign-password">
               <label class="sign-input-label">비밀번호</label>
               <input class="password-input" type="password" />
@@ -37,11 +36,19 @@
                 <img src="../image/eye-off.jpg" />
               </button>
             </div>
+            <div class="sign-form-inputs-box sign-password">
+              <label class="sign-input-label">비밀번호 확인</label>
+              <input class="confirm-password-input" type="password" />
+              <div class="error-message-password-confirm"></div>
+              <button class="eye-button" type="button">
+                <img src="../image/eye-off.jpg" />
+              </button>
+            </div>
           </div>
-          <button class="login-button" type="submit">로그인</button>
+          <button class="login-button" type="submit">회원가입</button>
         </form>
         <div class="social-login_group">
-          <span class="social-login-text">소셜 로그인</span>
+          <span class="social-login-text">다른 방식으로 가입하기</span>
           <div class="social-login-buttons">
             <a class="social-login-button google-link" href="https://www.google.com/">
               <img src="../image/google icon.png" />
@@ -52,8 +59,9 @@
           </div>
         </div>
       </div>
+    </div>
 
-    <script src="./signin.js"></script>
-  </div>
+    <script type="module" src="../common.js"></script>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
