--- a/signin.html
+++ b/signin.html
@@ -35,9 +35,9 @@
             <div class="password-input-group">
               <div class="password-wrappe">
                 <input type="password" class="password-input">
-                <img class="icon-eye" src="icon/eye-off.svg">
+                <img class="icon-eye password-eye" src="icon/eye-off.svg">
               </div>
-              <h6 class="password-input-message"></h6>
+              <h6 class="password-input-message password-message"></h6>
             </div>
           </label>
         </form>
