--- a/signin/signin.html
+++ b/signin/signin.html
@@ -46,8 +46,12 @@
       <div class="social">
         <p>소셜 로그인</p>
         <div class="icons">
-          <a href="https://www.google.com/" target="social"><img alt="google_account" src="../images/icon_google.svg" width 42></a>
-          <a href="https://www.kakaocorp.com/" target="social"><img alt="kakao_account" src="../images/icon_kakao.svg" width 42></a>
+          <a href="https://www.google.com/" target="social">
+            <img alt="google_account" src="../images/icon_google.svg" width 42>
+          </a>
+          <a href="https://www.kakaocorp.com/" target="social">
+            <img alt="kakao_account" src="../images/icon_kakao.svg" width 42>
+          </a>
         </div>
       </div>
     </div>
