--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <title>회원가입</title>
@@ -62,6 +62,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="./src/signup.js"></script>
+    <script type="module" src="src/signup.js"></script>
   </body>
 </html>
