--- a/signup.html
+++ b/signup.html
@@ -24,22 +24,25 @@
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input class="sign-input" />
+            <input class="sign-input sign-input-email" />
           </div>
+          <p class="email-error"></p>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input" type="password" />
+            <input class="sign-input sign-input-password" type="password" />
             <button class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
             </button>
           </div>
+          <p class="pw-error"></p>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호 확인</label>
-            <input class="sign-input" type="password" />
+            <input class="sign-input sign-input-password-check" type="password" />
             <button class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
             </button>
           </div>
+          <p class="pw-check-error"></p>
         </div>
         <button class="cta" type="submit">회원가입</button>
       </form>
@@ -55,6 +58,7 @@
         </div>
       </div>
     </div>
+    <script src="./src/signup.js"></script>
   </body>
 </html>
 
