--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>회원가입</title>
+    <meta
+      name="viewport"
+      content="width=device-width,minimum-scale=1,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
     <link
       rel="stylesheet"
       type="text/css"
